--- a/portfolio-main/css/style.css
+++ b/portfolio-main/css/style.css
@@ -2,7 +2,7 @@
 body {
   font-family: "Open Sans", sans-serif;
   background-color: #f7eded;
-  color: #fff;
+  color: #405DE6;
   position: relative;
   background: transparent;
 }
@@ -10,7 +10,7 @@ body {
 body::before {
   content: "";
   position: fixed;
-  background: #040404 ;
+  background: #FFDC80;
   background-size: cover;
   left: 0;
   right: 0;
@@ -26,17 +26,18 @@ body::before {
 }
 
 a {
-  color: #18d26e;
+  color: #F56040;
   text-decoration: none;
 }
 
 a:hover {
-  color: #35e888;
+  color: #405DE6;
   text-decoration: none;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Raleway", sans-serif;
+  font-family: 'Times New Roman', Times, serif;
+  color: #5B51D8;
 }
 
 /*--------------------------------------------------------------
@@ -67,7 +68,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #header h1 a,
 #header h1 a:hover {
-  color: #fff;
+  color: #F56040;
   line-height: 1;
   display: inline-block;
 }
@@ -75,12 +76,12 @@ h1, h2, h3, h4, h5, h6 {
 #header h2 {
   font-size: 24px;
   margin-top: 20px;
-  color: rgba(255, 255, 255, 0.8);
+  color: #F56040;
 }
 
 #header h2 span {
-  color: #fff;
-  border-bottom: 2px solid #18d26e;
+  color: #FD1D1D;
+  border-bottom: 2px solid #405DE6;
   padding-bottom: 6px;
 }
 
@@ -204,7 +205,7 @@ h1, h2, h3, h4, h5, h6 {
   height: 2px;
   bottom: -4px;
   left: 0;
-  background-color: #18d26e;
+  background-color: #405DE6;
   visibility: hidden;
   width: 0px;
   transition: all 0.3s ease-in-out 0s;
@@ -419,7 +420,7 @@ section .container {
   display: block;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
-  color: #fff;
+  color: #405DE6;
   font-size: medium;
 }
 
